<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="EyeManager"
        android:gravity="center_horizontal"
        android:textSize="35sp"
        android:textColor="#5AD27B"
        android:textStyle="bold"
        android:id="@+id/textview_main"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:textColor="#5AD27B"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/tv_main_screenfilterservice" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical"
                android:background="@drawable/card_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textSize="17dp"
                        android:textColor="#5AD27B"
                        android:text="@string/tv_main_screenfilter" />

                    <ToggleButton
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0"
                        android:layout_alignParentRight="true"
                        android:id="@+id/tb_screenfilterservice"
                        android:textOn="on"
                        android:textOff="off"
                        android:onClick="scfs"
                        android:textColor="#FFFFFF"
                        android:background="@drawable/bg_toggle_off"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:textSize="15dp"
                    android:textColor="#5AD27B"
                    android:text="@string/tv_main_screenfilter_selectcolor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <Button
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/r1"
                        android:onClick="colorselect1"
                        android:background="@drawable/btbg_c1"/>

                    <Button
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/r2"
                        android:onClick="colorselect2"
                        android:background="@drawable/btbg_c2"/>

                    <Button
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/r3"
                        android:onClick="colorselect3"
                        android:background="@drawable/btbg_c3" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:textSize="15dp"
                    android:textColor="#5AD27B"
                    android:text="@string/tv_main_screenfilter_transparency" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/scf_transparency"
                    android:max="100"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#5AD27B"
                    android:textStyle="bold"
                    android:id="@+id/scf_val_transparency"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:textColor="#5AD27B"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/tv_main_nightmodeservice" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical"
                android:background="@drawable/card_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textSize="17dp"
                        android:textColor="#5AD27B"
                        android:text="@string/tv_main_nightmode" />

                    <ToggleButton
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0"
                        android:layout_alignParentRight="true"
                        android:id="@+id/tb_nightmode"
                        android:textOn="on"
                        android:textOff="off"
                        android:onClick="nms"
                        android:textColor="#FFFFFF"
                        android:background="@drawable/bg_toggle_off"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:textSize="15dp"
                    android:textColor="#5AD27B"
                    android:text="@string/tv_main_nightmode_transparency" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/nm_transparency"
                    android:max="100"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#5AD27B"
                    android:textStyle="bold"
                    android:id="@+id/nm_val_transparency"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:text="@string/tv_main_notificationservice" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"
                android:background="@drawable/card_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:textSize="17dp"
                    android:textColor="#5AD27B"
                    android:text="@string/tv_main_notification" />

                <ToggleButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0"
                    android:id="@+id/tb_notificationservice"
                    android:textOn="on"
                    android:textOff="off"
                    android:onClick="nts"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/bg_toggle_off"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/btn_main_setting"
                        android:textColor="#FFFFFF"
                        android:textSize="20dp"
                        android:textAllCaps="false"
                        android:background="@drawable/main_btn_bg"
                        android:onClick="setting"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/btn_main_help"
                        android:textColor="#FFFFFF"
                        android:textSize="20dp"
                        android:textAllCaps="false"
                        android:background="@drawable/main_btn_bg"
                        android:onClick="help"/>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/ad"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ad_id"/>

</LinearLayout>
